--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,8 +1,8 @@
 {
-  "routes": [
+  "rewrites": [
     {
-      "src": "/uploads/(.*)",
-      "dest": "/uploads/$1"
+      "source": "/api/(.*)",
+      "destination": "https://screen2stream.onrender.com/api/$1"
     }
   ]
 }
