--- a/client/vercel.json
+++ b/client/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "https://screen2stream.onrender.com/api/$1"
+      "destination": "http://localhost:8000/api/$1"
     }
   ]
 }
